syntax = "proto3";

package raft;

option java_multiple_files = true;
option java_package = "com.raftdb.proto";
option java_outer_classname = "RaftProto";

// Service for Raft consensus algorithm (Node-to-Node)
service RaftService {
  rpc RequestVote (VoteRequest) returns (VoteResponse) {}
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

// Service for External Clients
service ClientService {
  rpc ExecuteCommand (Command) returns (CommandResponse) {}
}

// Data Structures
message LogEntry {
  int64 term = 1;
  int64 index = 2;
  Command command = 3;
}

message Command {
  enum Operation {
    SET = 0;
    GET = 1;
    DELETE = 2;
  }
  Operation operation = 1;
  string key = 2;
  string value = 3; // Empty for GET/DELETE
}

message CommandResponse {
  bool success = 1;
  string value = 2; // For GET
  string leaderId = 3; // Redirect info if not leader
  string error = 4;
}

// RPC Messages
message VoteRequest {
  int64 term = 1;
  string candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message VoteResponse {
  int64 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  int64 term = 1;
  string leaderId = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
  int64 matchIndex = 3; // Optimization for fast backtracking
}
